--- a/templates/entry.html
+++ b/templates/entry.html
@@ -3,21 +3,7 @@
 <h2>menossa mukana!</h2>
 <form action="/entry/{{day}}" method="POST">
 <p>
-<!--@app.route("/entry/<day>", methods=["GET","POST"])
-def entry(day):
-    #print("-- entry")
-    day = int(float(day))
-    user_id = session["user_id"]
-    date = datetime.datetime.today() + datetime.timedelta(days=day)
-    #print("--edelleen..")
-    if request.method == "GET":
-        event_list = events.get_events(user_id)
-        return render_template("entry.html", events=event_list, date=date, day=day)
-      return render_template("entry.html", events=event_list, date=date, day=day)
-
-listalla: e.id, e.name, e.description, e.min_participants, e.max_participants, e.event_level-->
 <h4>{{days_i[day]}} {{date.strftime('%d/%m')}}</h4>
-<!--#pvm, event.name, alkuaika, loppuaika, dow, day, i-->
 <b>valitse tapahtuma:</b>
 <select name="event_id">
     {% for event in events %}
@@ -34,8 +20,12 @@ listalla: e.id, e.name, e.description, e.min_participants, e.max_participants, e
 <p>
 <b>kommenttia osallistumiseeni liittyen: </b><br>
 <input type="text" name="comment" maxlength="150"><br>
-(kommentti näkyy myös kalenterisivun keskustelussa mukana)
-<p> 
+(kommentti näkyy kalenterisivun keskustelussa mukana)
+<p>
+<!------------------------------------------------------------------------------->
+<!-- tämä keskeneräinen ja rajattu näkymään vain adminille/ryhmän perustajalle --> 
+{% if session["user_role"] == 1 or session["user_role"] == 0 %}
+
 <b>Osallistujat tänään:</b>
 <ul>
     {% for participant in participants %}
@@ -50,16 +40,9 @@ listalla: e.id, e.name, e.description, e.min_participants, e.max_participants, e
     {% endfor %}
 </ul>
 <p>
+{% endif %}
+<!----------------------------------------------------------------------------------->
+<!------------------------------------------------------------------------------------>
 <input type="submit" value="Tallenna ilmoittautuminen">
 </form>
-<!--
-Valittu: tähän pvm
-Osallistun klo 00:00 - 00:00 valitse
-
-tai valitse vakioajoistasi klo 17:15 - 19:00 valitse
-                                20:00 - 21:00 valitse
-
-tänään osallistumassa:
-lista osallistujista ja ajoista...
--->
 {% endblock %}
