--- a/templates/userlist.html
+++ b/templates/userlist.html
@@ -49,7 +49,7 @@
          <td> {{user[4]}} </td>
          <td> {{user[1]}} </td>
          <td> {{user[2]}} </td>
-         <td> {{user[3]}} </td>
+         <td>{% if user[3] %} {{user[3]}} {% endif %}</td>
          <td> {{user[5].strftime("%d.%m.%Y")}} </td>
         </tr>
         {% endfor %}
@@ -90,7 +90,7 @@ aktiivisuus tapahtumaan 5 = admin poistanut jäseneltä oikeuden osallistua, tap
      <td> {{user_info[0]}} </td>
      <td> {{user_info[1]}} </td>
      <td> {{user_info[2]}} </td>
-     <td> {{user_info[3]}} </td>
+     <td>{% if user_info[3] %} {{user_info[3]}} {% endif %}</td>
      <td> {{user_info[4].strftime("%d.%m.%Y")}} </td>
      <td> {{user_info[5]}} </td>
      <td> {{user_info[6]}} </td>
