--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--<link rel="stylesheet" href="/static/main.css"> ota tämä käyttöön kun css -->
+<link rel="stylesheet" href="/static/style.css">
 <title>scheduler</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,3 +12,5 @@ Kirjautuneena nimellä <b>{{  session.user_name  }}</b>  |  <a href="/settings">
 {% endif %}
 {% block content %}
 {% endblock %}
+<p>
+<hr>
