--- a/templates/settings.html
+++ b/templates/settings.html
@@ -3,32 +3,35 @@
 <p>
 <!---------------------------------------------------------------------------------->
 <form action="/settings/change_user_name" method="POST">
-<h2 style="color:green">Omat tiedot hallinta</h2>
+<h2 id="ready">Omat tiedot hallinta</h2>
 <p>
 Tunnuksesi on: {{ user_info[0] }}<br>
 Kalenterissa näkyvä nimesi on: {{ user_info[1] }}<br>
 Yhteystietosi adminille: {% if user_info[2] %} {{ user_info[2] }} {% endif %}<br>
 <p>
+<hr>
 <b>Vaihda kalenterissa näkyvä nimesi*</b> <br>
 Anna uusi nimi:<br>
 <input type="text" name="name" minlength="2" maxlength="30">
-<br>*Huom! tunnus ei muutu, vain kalenterissa näkyvä nimi muuttuu. Oletuksena muille jäsenille näkyy rekisteröinnissä antamasi tunnus nimenäsi.
-Voit halutessasi vaihtaa kalenterissa näkyvää nimeäsi, kirjautumistunnuksesi säilyy silti ennallaan.<br>
-Nimi päivittyy heti uusiin viesteihin ja ilmoittautumisiin, ja ylhäälle näkymään kirjautuneena seuraavassa sisäänkirjautumisessa.
-<p>
-    <input type="submit" value="Tallenna muutos">
+<br>*Huom! tunnuksesi ei muutu, vain kalenterissa näkyvä nimesi muuttuu.<br>
+Nimesi päivittyy kaikkialle seuraavassa sisäänkirjautumisessa.
+<br>
+    <input class="button" type="submit" value="Tallenna muutos">
     <p>
     </form>
 <p>
+<hr>    
 <!--------------------------------------------------------------------------->
 <form action="/settings/change_contact_info" method="POST">
 
-Yhteystietoni vain adminin/adminien tietoon: <br>
-<input type="text" name="contact_info">
-<p>
-    <input type="submit" value="Tallenna muutos">
+<b>Anna yhteystietosi:</b>*<br>
+<input type="text" name="contact_info"><br>
+*vain adminin/adminien tietoon<br>
+
+    <input class="button" type="submit" value="Tallenna muutos">
     <p>
     </form>
+<hr>
 <!--------------------------------------------------------------------->
 <form action="/settings/change_password" method="POST">
 
@@ -41,7 +44,7 @@ Uusi salasana:<br><input type="password" name="new_password1">
 Uusi salasana uudelleen: <br><input type="password" name="new_password2">
 <input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
 <p>
-<input type="submit" value="Tallenna muutos">
+<input class="button"  type="submit" value="Tallenna muutos">
 <p>
 </form>
 <hr>
@@ -54,8 +57,9 @@ Uusi salasana uudelleen: <br><input type="password" name="new_password2">
 {% if session["user_role"] == 1 or session["user_role"] == 0 %}
 <!--(siirrä yllä olevaa adminin oikeusriviä, kun allaolevia jäsenelle kuuluvia asetuksia valmiina)-->
 -------------
-<h4 style="color:green">Alla näkyvistä ominaisuuksista suurin osa vasta luonnostelmia tai ei testattu toimintaa riittävästi<br>
-Vihreällä otsikoidut ovat kokeiltavaksi valmiita ominaisuuksia.</h4>
+<h4 id="ready"
+>Alla näkyvistä ominaisuuksista suurin osa vasta luonnostelmia tai ei testattu toimintaa riittävästi<br>
+violetilla otsikoidut ovat kokeiltavaksi valmiita ominaisuuksia.</h4>
 -------------
 <p>
 <form action="/settings/weekly_entries" method="POST">
@@ -80,7 +84,7 @@ viikonpäivä
 </select>
 aika: <input type="time" name="weekly_time_start"> - <input type="time" name="weekly_time_end">
 <p>
-    <input type="submit" value="Tallenna muutokset">
+    <input class="button" type="submit" value="Tallenna muutokset">
 <p>
 Vakioaikani:
 <Ul>
@@ -98,7 +102,7 @@ Vakioaikani:
 <hr>
 <!------------------------------------------------------------------->
 <form action="/settings/change_calendarview" method="POST">
-<h2 style="color:green">Kalenterinäkymässä näkyvät tapahtumat</h2>
+<h2 id="ready">Kalenterinäkymässä näkyvät tapahtumat</h2>
 <p>
 Tässä voit valita tapahtumat, jotka näkyvät kalenteriisi
 <p>
@@ -107,14 +111,14 @@ Tapahtuman nimi:
     {% for event in events_with_own_level %}
     <!-- vvvvv saako tähän on pienempi kuin neljä vvvvv miten escape-->
     {% if event[6] == 2 %}
-    <input type="checkbox" name="event_pick" value="{{event[0]}}" checked > <label for="event_pick"> {{event[1]}} taso {{event[5]}} {{event[2]}} </label><br>
+    <input type="checkbox" name="event_pick" value="{{event[0]}}" checked > <label for="event_pick"> {{event[1]}}, taso {{event[5]}} <br>..{{event[2]}} </label><br>
     {% else %}
-    <input type="checkbox" name="event_pick" value="{{event[0]}}" > <label for="event_pick"> {{event[1]}} taso {{event[5]}} {{event[2]}} </label><br>
+    <input type="checkbox" name="event_pick" value="{{event[0]}}" > <label for="event_pick"> {{event[1]}}, taso {{event[5]}} <br>..{{event[2]}} </label><br>
     {% endif %}
-    {% endfor %}    
+    {% endfor %}
 </select>
 <p>
-<input type="submit" value="Tallenna muutokset">
+<input class="button" type="submit" value="Tallenna muutokset">
 <p>
 </form>
 <hr>
@@ -141,7 +145,7 @@ Voit seurata kavereidesi alustavia toisen viikon suunnitelmia.<br>
 {% endfor %}
 {% endif %}
 <p>
-<input type="submit" value="Tallenna muutokset">
+<input class="button" type="submit" value="Tallenna muutokset">
 <p>
 </form>
 <hr>
@@ -168,29 +172,29 @@ Hae ajalta: <input type="date" name="date_start"> - <input type="date" name="dat
 <p>
     <hr>
     <p>
-    <b style="color:green">Muuta ryhmän nimi</b> <br>
+    <b id="ready">Muuta ryhmän nimi</b> <br>
     Anna uusi nimi:<br>
     <input type="text" name="name_group" minlength="2" maxlength="30">
      <p>
-        <input type="submit" value="Tallenna muutos">
+        <input class="button" type="submit" value="Tallenna muutos">
         <p>
             <input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
         </form>
     <p>
     <!--------------------------------------------------------------------------->
     <form action="/settings/change_group_description" method="POST">
-        <b style="color:green">Muuta ryhmän kuvaus</b><br>
+        <b id="ready">Muuta ryhmän kuvaus</b><br>
         Ryhmän kuvaus: <br><textarea name ="group_description" rows="3" cols="50" maxlength="400">
         </textarea>
            <p>
                <input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
 <p>
-        <input type="submit" value="Tallenna muutos">
+        <input class="button" type="submit" value="Tallenna muutos">
         <p>
         </form>
     <!--------------------------------------------------------------------->
     <form action="/settings/change_group_password" method="POST">
-    <b style="color:green">Salasanan vaihto:</b><br>
+    <b id="ready">Salasanan vaihto:</b><br>
     Huom! muuta takaisin ryhmän salasanaksi tsoha jos kokeilet.. :)
     <p>
     Oma kirjautumissalasanasi:<br><input type="password" name="old_password">
@@ -200,13 +204,13 @@ Hae ajalta: <input type="date" name="date_start"> - <input type="date" name="dat
     Uusi ryhmän salasana uudelleen: <br><input type="password" name="new_password2">
     <input type="hidden" name="csrf_token" value="{{session.csrf_token}}">
     <p>
-    <input type="submit" value="Tallenna muutos">
+    <input class="button" type="submit" value="Tallenna muutos">
     <p>
     </form>
     <hr>
 <!--------------------------------------------------------------------------->
 <form action="/settings/add_new_event" method="POST">
-<h2 style="color: green">Uuden tapahtuman luominen:</h2>
+<h2 id="ready">Uuden tapahtuman luominen:</h2>
 <b>Anna tapahtuman nimi: <input type="text" name="new_event_name" minlength="1" maxlength="30"></b>
 <p>
 <b>..voit halutessasi antaa lisätietoa:</b>
@@ -220,22 +224,22 @@ Anna maksimiosallistujamäärä: <input type="number" name="new_event_max_partic
 <p>
 <b>..ja rajata osallistujille oman taitotason tapahtumia:</b>
 <p>
-Anna tapahtumaan vaadittava (taito)taso: <input type="number" name="new_event_level" min="0" max="99"><br>
+Anna tapahtumaan vaadittava taso: <input type="number" name="new_event_level" min="0" max="99"><br>
 <p>
     Huom! Mikäli käytit tasoasetuksia, päivitä tapahtuman kohderyhmän jäsenille riittävä taso tapahtumaan 
     jäsenten asetuksissa tapahtuman tietojen tallentamisen jälkeen <br>
-    <a style="color:green" href="/settings/admin/userlist">pääset tästä jäsenten asetuksiin</a>
+    <a id="ready" href="/settings/admin/userlist">pääset tästä jäsenten asetuksiin</a>
     <p>Jäsenillä on oletuksena oikeus ilmoittautua nollatason tapahtumiin.
     Esim. jos määrittelet jäsenelle tason 5, niin jäsen näkee kaikki tapahtumat tasoilla 0-5
     ja voi omissa asetuksissaan valita näistä tapahtumista itselleen sopivat tapahtumat kalenterissa näytettäväksi.
 <p>
-    <input type="submit" value="Tallenna uuden tapahtuman tiedot">
+    <input class="button" type="submit" value="Tallenna uuden tapahtuman tiedot">
     <p>
     </form>
     <hr>
 <!------------------------------------------------------------------------------------------------>
 <form action="/settings/change_event_info" method="POST">
-<h2 style="color:green">Tapahtuman muuttaminen tai poistaminen käytöstä</h2>
+<h2 id="ready">Tapahtuman muuttaminen tai poistaminen käytöstä</h2>
 <p>
 <p><b>valitse tapahtuma:</b>
 <select name="event_pick">
@@ -243,6 +247,7 @@ Anna tapahtumaan vaadittava (taito)taso: <input type="number" name="new_event_le
 <option value="{{event[0]}}"> {{event[1]}} | taso {{event[5]}}
     {% endfor %}
 </select>
+<p>
   <b>valitse toiminto:</b>
 <select name="event_action">
 <option value="2"> muuta nimi
@@ -252,30 +257,33 @@ Anna tapahtumaan vaadittava (taito)taso: <input type="number" name="new_event_le
 <option value="6"> muuta tasomääritys
 <option value="1"> poista käytöstä*
 </select>
-<p>
-    *käytöstä poistetut tapahtumat (taso 100) voidaan ottaa uudelleen käyttöön muuttamalla tasomääritys normaaliksi, myös muita tapahtuman tietoja voi muutella.
+<p>   
 <!--tässä bugivaara.. jos tapahtuma muutetaan kokonaan toiseksi, niin siihen täytyy olla vielä users in events -lisäkäsittelyä, joten erikseen toimintoihin vielä-->
-<br><b>Täytä vain valintaasi vastaava kenttä:</b><br>
+<b>Täytä vain valintaasi vastaava kenttä:</b>
+<p>
 muuta nimi: <input type="text" name="event_name" minlength="1" maxlength="35">
 <p>
-muuta kuvaus: <textarea name="event_description" rows="2" cols="50" maxlength="150">
+muuta kuvaus: <textarea name="event_description" rows="2" cols="40" maxlength="150">
 </textarea>
 <p>
 minimi- tai maksimiosallistujamäärä: <input type="number" name="number_value1" min="0" max="99999">
 <p>
 muuta taso: <input type="number" name="number_value2" min="0" max="99">
-<p>
-<input type="submit" value="Tallenna muutokset">
-<p>
+<h5>
+    *käytöstä poistetut tapahtumat (taso 100) voidaan ottaa uudelleen käyttöön muuttamalla tasomääritys normaaliksi.
+</h5> 
+<input class="button" type="submit" value="Tallenna muutokset">
+<p>    
 </form>
 <hr>
 <!---------------------------------------------------------------------->
 <form action="/settings/admin/message" method="POST">
-<h2 style="color: green">Admin -viesti</h2>
+<h2 id="ready">Admin -viesti</h2>
 Lyhyt viesti, joka näkyy jäsenille ensimmäisen viikon näkymässä ja on päivitettävissä.
-<br> Viesti: <input type="text" name="admin_info">
+<p> 
+  Viestisi: <input type="text" name="admin_info">
 <p>
-<input type="submit" value="Tallenna viesti">
+<input class="button" type="submit" value="Tallenna viesti">
 <p>
 </form>
 <hr>
@@ -284,7 +292,7 @@ Lyhyt viesti, joka näkyy jäsenille ensimmäisen viikon näkymässä ja on päi
 <h2>Jäsenten hallinta</h2>
 <!--##tämä vielä keskeneräinen: haku ja jäsenlistan järjestyksen muokkaus vai linkki? nyt linkki toimii.. -->
 <p>
-    <a style="color:green" href="/settings/admin/userlist">Tarkastele ja muuta jäsenien asetuksia</a>
+    <a id="ready" href="/settings/admin/userlist">Tarkastele ja muuta jäsenien asetuksia</a>
 <p>
 voit mm.:
 <ul>
