Remove whitespaces etc.

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@ Tunnus: <br><input type="text" name="username">
 <p>
 Salasana: <br><input type="password" name="password">
 <p>
-<input type="submit" value="Kirjaudu">    
+<input class="button" type="submit" value="Kirjaudu">
 </form>
 <p>
 <hr>
